Updated th swagger docs
