# docs/swagger.yaml
@@ -35,7 +35,7 @@ definitions:
 host: localhost:8000
 info:
   contact:
-    email: your.email@example.com
+    email: nwankwobenson29@gmail.com
     name: Benson
   description: This is the API for my media streaming server
   license:
@@ -45,25 +45,6 @@ info:
   title: Media Server API
   version: "1.0"
 paths:
-  /media:
-    get:
-      description: Retrieves all media items from the database.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/database.MediaItem'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Get all media items
-      tags:
-      - media
   /media/{id}:
     get:
       description: Returns a single media item by its unique ID.
@@ -152,6 +133,25 @@ paths:
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Get thumbnail image for media
+      tags:
+      - media
+  /media/all:
+    get:
+      description: Retrieves all media items from the database.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/database.MediaItem'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Get all media items
       tags:
       - media
   /media/paginated:
